syntax = "proto3";
package junction.trackgate;

option go_package = "github.com/airchains-network/junction/x/trackgate/types";

message ExtTrackStations {
  
  repeated string operators = 1; 
  uint64 latestPod = 2; 
  string latestAcknowledgementHash = 3;
  string name = 4; 
  string id = 5; 
  string stationType = 6; 
  bool fheEnabled = 7; 
  bytes sequencerDetails = 8;
  bytes daDetails = 9;
  bytes proverDetails = 10;
  string stationSchemaKey = 11;
  string creator = 12;
}
